[gd_scene load_steps=7 format=3 uid="uid://bjglqyt10t3vk"]

[ext_resource type="Script" path="res://planetary_bodies/planet.gd" id="1_qff5j"]
[ext_resource type="Texture2D" uid="uid://brlmetr3dd88p" path="res://assets/icons/selected-planet.png" id="2_iy5kq"]
[ext_resource type="Texture2D" uid="uid://eam1kwdyj1px" path="res://assets/icons/unselected-planet.png" id="3_xhwhu"]
[ext_resource type="FontFile" uid="uid://caauq1ypghy5b" path="res://assets/fonts/Gudea-Regular.ttf" id="4_rnuvn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4rxkx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_iy5kq")
}],
"loop": true,
"name": &"selected",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_xhwhu")
}],
"loop": true,
"name": &"unselected",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_j5x01"]
radius = 36.4006

[node name="Planet" type="Area2D"]
script = ExtResource("1_qff5j")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.07, 0.07)
sprite_frames = SubResource("SpriteFrames_4rxkx")
animation = &"unselected"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_j5x01")

[node name="BuildShipTimer" type="Timer" parent="."]
process_callback = 0
autostart = true

[node name="ShipCountLabel" type="Label" parent="."]
visible = false
offset_left = -21.0
offset_top = -45.0
offset_right = 20.0
offset_bottom = 46.0
theme_override_fonts/font = ExtResource("4_rnuvn")
theme_override_font_sizes/font_size = 70
text = "0"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="BuildShipTimer" to="." method="_on_build_ship_timer_timeout"]
